Fix CSS style for spacing

--- a/app/assets/stylesheets/server/servers.scss
+++ b/app/assets/stylesheets/server/servers.scss
@@ -36,7 +36,6 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 .chat {
